fix challenge image covers the calendar

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -56,5 +56,26 @@
     display: none;
 }
 
+.dz-image {
+    z-index: 6 !important;
+}
 
+.dz-details {
+    z-index: 8 !important;
+}
 
+.dz-progress {
+    z-index: 9 !important;
+}
+
+.dz-error-message {
+    z-index: 9 !important;
+}
+
+.dz-success-mark {
+    z-index: 7 !important;
+}
+
+.dz-error-mark {
+    z-index: 7 !important;
+}
